fix: little fix on testGetSessionsByTherapistId